--- a/moh/Dockerfile
+++ b/moh/Dockerfile
@@ -1,19 +1,21 @@
-FROM progrium/busybox
+FROM debian:wheezy
 MAINTAINER Vitaly Kovalyshyn "v.kovalyshyn@webitel.com"
 
 ENV SND_VERSION 1.0.51
 ENV SND_NAME music
 
-RUN opkg-install curl \
+RUN echo 'deb http://ftp.us.debian.org/debian/ wheezy main' >> /etc/apt/sources.list &&\
+	echo 'deb http://security.debian.org/ wheezy/updates main' >> /etc/apt/sources.list &&\
+	apt-get -y --quiet update && apt-get -y --quiet upgrade && apt-get -y --quiet install curl \
 	&& mkdir -p /sounds \
     && curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz \
-    | tar -xC /sounds \
+    | tar -xJC /sounds \
     && curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz \
-    | tar -xC /sounds \
+    | tar -xJC /sounds \
     curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
-    | tar -xC /sounds \
+    | tar -xJC /sounds \
     curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
-    | tar -xC /sounds
+    | tar -xJC /sounds
 
 VOLUME ["/sounds/music"]
 ENTRYPOINT ["true"]
