--- a/en/Dockerfile
+++ b/en/Dockerfile
@@ -9,13 +9,13 @@ RUN echo 'deb http://ftp.us.debian.org/debian/ wheezy main' >> /etc/apt/sources.
 	apt-get -y --quiet update && apt-get -y --quiet upgrade && apt-get -y --quiet install curl \
 	&& mkdir -p /sounds \
     && curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz \
-    | tar -xJC /sounds \
+    | tar -xzJC /sounds \
     && curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz \
-    | tar -xJC /sounds \
+    | tar -xzJC /sounds \
     curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
-    | tar -xJC /sounds \
+    | tar -xzJC /sounds \
     curl -SL http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
-    | tar -xJC /sounds
+    | tar -xzJC /sounds
 
 VOLUME ["/sounds/en"]
 ENTRYPOINT ["true"]
