--- a/moh/Dockerfile
+++ b/moh/Dockerfile
@@ -8,14 +8,15 @@ RUN echo 'deb http://ftp.us.debian.org/debian/ wheezy main' >> /etc/apt/sources.
 	&& apt-get -y --quiet update \
 	&& apt-get -y --quiet install curl \
 	&& mkdir -p /sounds \
+	&& cd /sounds \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz \
-	| tar -xzC /sounds \
+	| tar -xzv \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz \
-	| tar -xzC /sounds \
+	| tar -xzv \
 	curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
-	| tar -xzC /sounds \
+	| tar -xzv \
 	curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
-	| tar -xzC /sounds
+	| tar -xzv
 
 VOLUME ["/sounds/music"]
 ENTRYPOINT ["true"]
