--- a/moh/Dockerfile
+++ b/moh/Dockerfile
@@ -4,19 +4,18 @@ MAINTAINER Vitaly Kovalyshyn "v.kovalyshyn@webitel.com"
 ENV SND_VERSION 1.0.51
 ENV SND_NAME music
 
-RUN echo 'deb http://ftp.us.debian.org/debian/ wheezy main' >> /etc/apt/sources.list \
-	&& apt-get -y --quiet update \
+RUN apt-get -y --quiet update \
 	&& apt-get -y --quiet install curl \
+	&& rm -rf /var/lib/apt/lists/*
 	&& mkdir -p /sounds \
-	&& cd /sounds \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz \
-	| tar -xzv \
+	| tar zxf -C /sounds \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz \
-	| tar -xzv \
-	curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
-	| tar -xzv \
-	curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
-	| tar -xzv
+	| tar zxf -C /sounds \
+	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
+	| tar zxf -C /sounds \
+	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
+	| tar zxf -C /sounds
 
 VOLUME ["/sounds/music"]
 ENTRYPOINT ["true"]
