--- a/ru/Dockerfile
+++ b/ru/Dockerfile
@@ -8,14 +8,15 @@ RUN apt-get -y --quiet update \
 	&& apt-get -y --quiet install curl \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& mkdir -p /sounds \
+	&& cd /sounds \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz \
-	| tar zxf -C /sounds \
+	| tar zxf \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz \
-	| tar zxf -C /sounds \
+	| tar zxf \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz \
-	| tar zxf -C /sounds \
+	| tar zxf \
 	&& curl http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz \
-	| tar zxf -C /sounds
+	| tar zxf
 
 VOLUME ["/sounds/ru"]
 ENTRYPOINT ["true"]
