--- a/moh/Dockerfile
+++ b/moh/Dockerfile
@@ -1,18 +1,16 @@
-FROM debian:wheezy
+FROM progrium/busybox
 MAINTAINER Vitaly Kovalyshyn "v.kovalyshyn@webitel.com"
 
 ENV SND_VERSION 1.0.51
 ENV SND_NAME music
 
-RUN apt-get -y --quiet update \
-	&& apt-get -y --quiet install wget \
+RUN opkg-install tar wget \
 	&& mkdir -p /sounds \
 	&& cd /sounds \
 	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz | tar zxf - \
 	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz | tar zxf - \
 	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz | tar zxf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | tar zxf - \
-	&& rm -rf /var/lib/apt/lists/*
+	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | tar zxf - 
 
 VOLUME ["/sounds/music"]
 ENTRYPOINT ["true"]
