--- a/en/Dockerfile
+++ b/en/Dockerfile
@@ -4,13 +4,13 @@ MAINTAINER Vitaly Kovalyshyn "v.kovalyshyn@webitel.com"
 ENV SND_VERSION 1.0.51
 ENV SND_NAME en-us-callie
 
-RUN opkg-install tar wget \
+RUN opkg-install wget tar gzip \
 	&& mkdir -p /sounds \
 	&& cd /sounds \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz | tar zxf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz | tar zxf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz | tar zxf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | tar zxf - 
+	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | gzip -dc - | tar xf -
 
 VOLUME ["/sounds/en"]
 ENTRYPOINT ["true"]
