--- a/en/Dockerfile
+++ b/en/Dockerfile
@@ -7,10 +7,10 @@ ENV SND_NAME en-us-callie
 RUN opkg-install wget tar gzip \
 	&& mkdir -p /sounds \
 	&& cd /sounds \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
-	&& wget -O - http://files-sync.freeswitch.org/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | gzip -dc - | tar xf -
+	&& wget -O - http://files-sync.freeswitch.org/releases/sounds/freeswitch-sounds-$SND_NAME-8000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/releases/sounds/freeswitch-sounds-$SND_NAME-16000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/releases/sounds/freeswitch-sounds-$SND_NAME-32000-$SND_VERSION.tar.gz | gzip -dc - | tar xf - \
+	&& wget -O - http://files-sync.freeswitch.org/releases/sounds/freeswitch-sounds-$SND_NAME-48000-$SND_VERSION.tar.gz | gzip -dc - | tar xf -
 
 VOLUME ["/sounds/en"]
 ENTRYPOINT ["true"]
